--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "cors": "^2.8.4",
+    "dom-template-strings": "^2.4.2",
     "express": "^4.14.1",
-    "node-fetch": "^1.7.3",
-    "superdom": "^1.3.0"
+    "node-fetch": "^1.7.3"
   }
 }
