--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " npm run scss | rollup --watch --config rollup.js | node --experimental-modules ./server/index.mjs",
+    "dev": " npm run scss | node --experimental-modules ./server/index.mjs | rollup --watch --config rollup.js ",
     "scss": "node-sass -w -r client/styles/main.scss public/bundle.css",
     "build": "NODE_ENV=production rollup --config rollup.js || autoprefixer -b 'last 2 versions' < public/bundle.css"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.7.3",
+    "autoprefixer": "^6.7.7",
+    "dom-template-strings": "^2.4.2",
     "moment": "^2.18.1",
+    "node-sass": "latest",
     "pikaday": "^1.5.1",
     "postcss": "^5.2.13",
     "prettier": "^1.5.3",
     "quill": "^1.3.3",
     "rollup": "latest",
-    "node-sass": "latest",
     "rollup-plugin-commonjs": "^6.0.0",
     "rollup-plugin-json": "latest",
     "rollup-plugin-node-resolve": "latest",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-root-import": "^0.2.2",
-    "dom-template-strings": "^2.4.2",
     "rollup-plugin-uglify": "latest",
     "rollup-watch": "^2.5.0"
   },
